jwt auth, /trainer routes
